--- a/portfolio.html
+++ b/portfolio.html
@@ -3,52 +3,73 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Portfolio | Your Name</title>
+  <title>Portfolio | Claudia Seldner</title>
   <link rel="stylesheet" type="text/css" href="style_portfolio.css">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 
 <body>
 
   <header id="masthead">
-    <div class="container">
+      <nav class=" navbar navbar-expand-lg navbar-light bg-light">
+          <div class="navbar-brand1" href="#">Claudia Seldner</div>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+              <a class="nav-item nav-link active" href="index.html">About<span class="sr-only">(current)</span></a>
+              <a class="nav-item nav-link" href="portfolio.html">Portfolio</a>
+              <a class="nav-item nav-link" href="contact.html">Contact</a>
+            </div>
+          </div>
+    </header>
+        <!-- </nav> -->
+    <!-- <div class="container">
       <a href="index.html" id="logo">Your Name</a>
       <nav>
         <a href="index.html">About</a>
         <a href="portfolio.html">Portfolio</a>
-        <a href="contact.html">Contact</a>
-      </nav>
-    </div>
-  </header>
+        <a href="contact.html">Contact</a> -->
+      <!-- </nav> -->
+
+  
+   
+ 
 
   <div id="main-container" class="container">
     <section class="main-section">
       <h1>Portfolio</h1>
 
-      <div class="work">
-        <img src="assets/images/technics-q-c-640-480-1.jpg" alt="Word Guess">
+       <!-- Códicgo para centrar imágenes -->
+    <div class="centrar"> 
 
-        <h3>Word Guess</h3>
+      <div class="work">
+        <img src="ecommerce.jpeg" alt="">
+
+        <h3>Project 1</h3>
       </div>
       <div class="work">
-        <img src="assets/images/technics-q-c-640-480-2.jpg" alt="RPG Game">
+        <img src="nature.jpg" alt="Project 1">
 
-        <h3>RPG Game</h3>
+        <h3>Project 2</h3>
       </div>
       <div class="work">
-        <img src="assets/images/technics-q-c-640-480-5.jpg" alt="Trivia Game">
+        <img src="Sharing-economy.jpeg" alt="Project 2">
 
-        <h3>Trivia Game</h3>
+        <h3>Project 3</h3>
       </div>
       <div class="work">
-        <img src="assets/images/technics-q-c-640-480-7.jpg" alt="Rutgers Info Widget">
+        <img src="int-mkp2.jpg" alt="Project 3">
 
-        <h3>Rutgers Info Widget</h3>
+        <h3>Project 4</h3>
       </div>
       <div class="work">
-        <img src="assets/images/technics-q-c-640-480-9.jpg" alt="Rock Paper Scissors">
+        <img src="Boutique.jpg" alt="Project 4">
 
-        <h3>Rock Paper Scissors</h3>
+        <h3>Project 5</h3>
       </div>
+    </div> 
 
     </section>
 
