--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </div> -->
 
     <nav class=" navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand " href="#">Claudia Seldner</a>
+        <div class="navbar-brand1 " href="#">Claudia Seldner</div>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -36,7 +36,7 @@
 
   </header>
 
-  <div id="main-container" class="container">
+  <div id="main-container1" class="container">
     <section class="main-section">
       <h1>About Me</h1>
 
